# qacampus-ec26-al-workshop-scheduling-agent

./: .env  .gitignore  README.md  Tiltfile  decrypt-kubeconfig.sh  pyproject.toml  server.py
.github/workflows/: release-mcp-server.yml
deploy/infra/: kustomization.yaml  lgtm-grafana-dashboard-config.yaml  namespace.yaml  presidio.yaml  tool-gateway.yaml
deploy/local/: agent-gateway.yaml  agent-runtime-config.yaml  ai-gateway-pii.yaml  ai-gateway.yaml  ec-schedule-agent-experiment.yaml  ec-schedule-agent.yaml  ec-schedule-mcp.yaml  guardrail-presidio.yaml  kustomization.yaml  lgtm.yaml  presidio.yaml
kubeconfigs-encrypted/: workshop-kubeconfig-admin.yaml.enc  workshop-kubeconfig.yaml.enc
mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
mcp-server/tests/: conftest.py  test_server.py
test/e2e/: a2a-message.sh
tests/: conftest.py  test_server.py
