[project]
name = "ec-schedule-agent"
version = "0.1.0"
description = "MCP server for Engineering Camp 2026 schedule"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
